tests/miniJava/neg/006641_mutation.MiniJava
class java { public static void Main ( while String [ ] java ) { { } } }
